Fixed alignment of elements.

--- a/automatic-test-evaluation/src/CreateTemplateComponents/SecondStep/SingleAnswerBlankList.css
+++ b/automatic-test-evaluation/src/CreateTemplateComponents/SecondStep/SingleAnswerBlankList.css
@@ -1,3 +1,10 @@
 .check-box-style, .test-test-test {
     display: inline-block;
 }
+
+.radio-button-group {
+    display: inline-flex;
+}
+.radio-button-group div {
+    
+}
